src/test/ui/suggestions/fn-or-tuple-struct-with-underscore-args.stderr
error[E0658]: destructuring assignments are unstable
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:10:24
   |
LL |     let _: usize = foo(_, _);
   |                        ^
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:10:27
   |
LL |     let _: usize = foo(_, _);
   |                           ^
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:15:18
   |
LL |     let _: S = S(_, _);
   |                  ^
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:15:21
   |
LL |     let _: S = S(_, _);
   |                     ^
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:20:27
   |
LL |     let _: usize = T::baz(_, _);
   |                           ^
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:20:30
   |
LL |     let _: usize = T::baz(_, _);
   |                              ^
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:10:24
   |
LL |     let _: usize = foo(_, _);
   |                        ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:10:27
   |
LL |     let _: usize = foo(_, _);
   |                           ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:15:18
   |
LL |     let _: S = S(_, _);
   |                  ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:15:21
   |
LL |     let _: S = S(_, _);
   |                     ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:20:27
   |
LL |     let _: usize = T::baz(_, _);
   |                           ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:20:30
   |
LL |     let _: usize = T::baz(_, _);
   |                              ^ `_` not allowed here

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0658`.
